--- a/wiki/CreateSfbJar.wiki
+++ b/wiki/CreateSfbJar.wiki
@@ -1,3 +1,3 @@
-= How to Crate an SFB =
+= How to Create a SFB =
 
 A SFB (SOAFaces Bundle) is a simple JAR that contains the classes and resources needed to execute your SOAFaces Application or Task/Job.
