--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -1,4 +1,4 @@
-#How to use the PseudoMuleClient API in your GWT applications
+How to use the PseudoMuleClient API in your GWT applications
 
 = Introduction =
 
