--- a/wiki/HowToCreateApplication.wiki
+++ b/wiki/HowToCreateApplication.wiki
@@ -3,9 +3,17 @@
 ==Example Application SFB==
 This example shows how to build a SFB that implements a Tasklet and also includes an Applet for customizing the Tasklet's input !JavaBean.
 
-Follow these steps to learn how to develop, package and deploy your own SOAFaces Bundle (SFB).
+Follow these steps to learn how to develop, package and deploy your own SOAFaces Bundle (SFB):
 
-===Step 1: Implement a Tasklet===
+  # Implement SOATasklet Interface
+  # Implement SOAApplet Interface (Optional)
+  # Define an Input !JavaBean for Tasklet (Optional)
+  # Define an Output !JavaBean for Tasklet (Optional)
+  # Create MANIFEST.MF File
+  # Package Contents into a SFB JAR file
+  # Deploy the new SFB to a SFB Container (like !JobServer)
+
+===Step 1: Implement SOATasklet Interface===
 
 Using the SOATasklet interface, implement the `org.soafces.bundle.workflow.SOATasklet` interface by implementing the `onExecute` method. Here is a simple example:
 
@@ -48,9 +56,9 @@ public class HelloWorld implements SOATasklet
 }}}
 
 
-The onExecute method will be called when the above Tasklet is run as part of a job.
+The `onExecute` method will be called when the above Tasklet is run as part of a job.
 
-===Step 2: Implement a SOAApplet==
+===Step 2: Implement SOAApplet Interface (Optional)==
 
 This step is optional when creating Tasklets. The SOAApplet will be used to customize the input !JavaBean that is used as input to the SOATasklet when the job is run. Here is what the SOAApplet implementation might look like:
 
@@ -126,9 +134,9 @@ public class HelloWorldCustomizer extends SimplePOJOApplet
 }}}    
     
 
-===Step 3: Define an Input !JavaBean===
+===Step 3: Define an Input !JavaBean for Tasklet (Optional) ===
 
-The input !JavaBean is edited by the SOAApplet and used as input by the SOATasklet when the job is run. An example would be like this:
+The input !JavaBean can be edited by the SOAApplet and used as input by the SOATasklet when the job is run. An example would be like this:
 
 {{{
 public class HelloWorldInput implements IsSerializable
@@ -154,17 +162,46 @@ public class HelloWorldInput implements IsSerializable
   } 	
 }
 }}}
+
+===Step 4: Define an Output !JavaBean for Tasklet (Optional) ===
+
+The output !JavaBean is used by the SOATasklet as output. When the Tasklet is run as part of a job the SOATasklet interface can write an relevant output to this !JavaBean An example would be like this:
+
+{{{
+public class HelloWorldOutput implements IsSerializable
+{
+  private String personName="";
+
+  public HelloWorldInput()
+  {
+    super();
+  }
+
+  /**
+   * Name of person to put in the Hello world sentence.
+   */
+  public void setPersonName(String value)
+  {
+    personName=value;
+  } 
+
+  public String getPersonName()
+  {
+    return personName;
+  } 	
+}
+}}}
     
 
-===Step 4: Create MANIFEST.MF File===
+===Step 5: Create MANIFEST.MF File===
 
-The MANIFEST.MF file contains the meta information that informs JobServer what is contained in the SFB JAR file and what interfaces are defined by the SFB. The file is placed in the META-INF directory within the SFB JAR.
+The MANIFEST.MF file contains the meta information that informs a SOAFaces container like !JobServer what is contained in the SFB JAR file and what interfaces are defined by the SFB. The file is placed in the META-INF directory within the SFB JAR.
 
 {{{
 SOAFaces-Name: Hello World 3
 SOAFaces-SymbolicName: surda-beansoup-helloworld3
 SOAFaces-Version: 1.0.0
-SOAFaces-Description: Simple Mulet with an input JavaBean and MFace Customizer
+SOAFaces-Description: Simple Tasklet with an input JavaBean and MFace Customizer
 SOAFaces-Vendor: Grand Logic, Inc
 SOAFaces-Category: example
 SOAFaces-Tasklet: org.beansoup.helloworld3.workflow.HelloWorld
@@ -172,7 +209,7 @@ SOAFaces-InputBean: org.beansoup.helloworld3.client.HelloWorldInput
 SOAFaces-Applet: org.beansoup.helloworld3.client.HelloWorldCustomizer
 }}}
 
-===Step 5: Package Contents into a SFB JAR file===
+===Step 6: Package Contents into a SFB JAR file===
 
 All the code and content are packaged and put into a SFB JAR file with the file extension .sfb. Here is an example directory structure of the JAR file.
 
@@ -191,9 +228,46 @@ lib/
     someThirdPartyGWT-Client.jar
     someThirdPartyServer-Side.jar
 }}}
+
+Here is an example of a simple ANT target that can construct the SFB archive file:
+
+{{{
+    <target name="beansoup_tba" depends="beansoup" description="Package all BeanSoup components into tba jars">
+    <mkdir dir="build/beansoup-build/org-beansoup-helloworld3-v1-0-0/classes" />
+      <copy todir="build/beansoup-build/org-beansoup-helloworld3-v1-0-0/classes"
+            overwrite="false">
+         <fileset dir="${build.classes.dir}"
+                  includes="org/beansoup/helloworld3/**/*.class"/>
+                 
+         <fileset dir="${src.dir}"
+                  includes="org/beansoup/helloworld3/*.xml
+                            org/beansoup/helloworld3/client/*.java
+                            org/beansoup/helloworld3/public/*.css"/>
+      </copy>
+      <jar destfile="build/beansoup-build/org-beansoup-helloworld3-v1-0-0.sfb"
+           basedir="build/beansoup-build/org-beansoup-helloworld3-v1-0-0"
+           includes="**">
+    
+         <manifest>
+           <attribute name="SOAFaces-Name"            value="Hello World 3"/>
+           <attribute name="SOAFaces-SymbolicName"    value="surda-beansoup-helloworld3"/>
+           <attribute name="SOAFaces-Version"         value="1.0.0"/>
+           <attribute name="SOAFaces-Description"     value="Simple Mulet with an input JavaBean and MFace Customizer"/>
+           <attribute name="SOAFaces-Vendor"          value="Grand Logic, Inc"/>
+           <attribute name="SOAFaces-Category"        value="example"/>
+           <attribute name="SOAFaces-Tasklet"         value="org.beansoup.helloworld3.workflow.HelloWorld"/>
+           <attribute name="SOAFaces-InputBean"       value="org.beansoup.helloworld3.client.HelloWorldInput"/>
+           <attribute name="SOAFaces-OutputBean"      value=""/>
+           <attribute name="SOAFaces-Applet"          value="org.beansoup.helloworld3.client.HelloWorldCustomizer"/>
+           <attribute name="SOAFaces-InputViewer"     value=""/>
+           <attribute name="SOAFaces-OutputViewer"    value=""/>
+         </manifest>    
+      </jar>
+}}}
     
 
 Notice that the client GWT code requires the source also be included in the JAR file. The GWT compiler requires the source and will use this to compile, on the fly, the SOAApplet into GWT AJAX code. The lib directory can contain any needed third party JARs used by the SOAApplet or SOATasklet code.
-Step 6: Deploy the new SFB to JobServer
 
-Name the SFB JAR something like myhelloworld.sfb and place it in the JobServer soafaces directory. The name must be unique within JobServer. Now go to the JobServer SOAFaces Repository tool and you should see the new SFB. It can now be used to build a new Job! 
+===Step 7: Deploy the new SFB to a SFB Container (like !JobServer)===
+
+Name the SFB JAR something like myhelloworld.sfb and place it in the !JobServer soafaces directory. The name must be unique within !JobServer. Now go to the !JobServer SOAFaces Repository tool and you should see the new SFB. It can now be used to build a new job!
