Edited wiki page through web user interface.

--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -265,6 +265,7 @@ Here is an example of a simple ANT target that can construct the SFB archive fil
            <attribute name="SOAFaces-OutputViewer"    value=""/>
          </manifest>    
       </jar>
+    </target>
 }}}
     
 
